Bug 1621684 - Take an audio-playing wakelock when using WebAudio. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D67544